--- a/docs/report/refs.bib
+++ b/docs/report/refs.bib
@@ -1,16 +1,16 @@
 @misc{3d_projection,
-  author = "{Wikipedia contributors}",
-  title = "3D projection --- {Wikipedia}{,} The Free Encyclopedia",
-  year = "2023",
-  howpublished = "\url{https://en.wikipedia.org/w/index.php?title=3D_projection&oldid=1148285432}",
-  note = "[Online; accessed 6-April-2023]"
+  author       = {{Wikipedia contributors}},
+  title        = {3D projection --- {Wikipedia}{,} The Free Encyclopedia},
+  year         = {2023},
+  howpublished = {\url{https://en.wikipedia.org/w/index.php?title=3D_projection&oldid=1148285432}},
+  note         = {[Online; accessed 6-April-2023]}
 }
 
 @article{ada,
-  title = "{How Ada advances the science of graphics with DLSS 3.}",
-  author = "{Henry C Lin and  Andrew Burnes}",
-  year = "2022",
-  note = "[Online; accessed 2-May-2023]"
+  title  = {{How Ada advances the science of graphics with DLSS 3.}},
+  author = {{Henry C Lin and  Andrew Burnes}},
+  year   = {2022},
+  note   = {[Online; accessed 2-May-2023]}
 }
 
 @misc{blinn,
@@ -26,6 +26,11 @@
 @misc{camera_projection,
   title        = {Model View Projection},
   howpublished = {\url{https://jsantell.com/model-view-projection/}}
+}
+
+@misc{cereal,
+  title        = {cereal - A C++11 library for serialization},
+  howpublished = {\url{https://uscilab.github.io/cereal/}}
 }
 
 @misc{cmake,
@@ -73,14 +78,17 @@
   howpublished = {\url{https://www.khronos.org/gltf/}}
 }
 
+@misc{gta_leak,
+  author       = {{Keza MacDonald, Keith Stuart and Alex Hern}},
+  year         = {{2022}},
+  month        = {{9}},
+  day          = {{19}},
+  howpublished = {\url{https://www.theguardian.com/games/2022/sep/19/grand-theft-auto-6-leak-who-hacked-rockstar-and-what-was-stolen}}
+}
+
 @misc{imgui,
   title        = {ImGui},
   howpublished = {\url{https://github.com/ocornut/imgui/}}
-}
-
-@misc{cereal,
-  title        = {cereal - A C++11 library for serialization},
-  howpublished = {\url{https://uscilab.github.io/cereal/}}
 }
 
 @misc{imguizmo,
@@ -95,23 +103,16 @@
 }
 
 
-@misc{gta_leak,
-  author = "{Keza MacDonald, Keith Stuart and Alex Hern}",
-  year = "{2022}",
-  month = "{9}",
-  day = "{19}",
-  howpublished = {\url{https://www.theguardian.com/games/2022/sep/19/grand-theft-auto-6-leak-who-hacked-rockstar-and-what-was-stolen}}}
-
 @misc{mit,
   title        = {The MIT License},
   howpublished = {\url{https://opensource.org/license/mit/}}
 }
 
 @article{rdna,
-  title = "{RDNA architecture - The all new Radeon gaming architecture powering ``Navi''}",
-  author = "{AMD}",
-  year = "2019",
-  note = "[Online; accessed 23-January-2023]"
+  title  = {{RDNA architecture - The all new Radeon gaming architecture powering ``Navi''}},
+  author = {{AMD}},
+  year   = {2019},
+  note   = {[Online; accessed 23-January-2023]}
 }
 
 @misc{render_man,
@@ -127,6 +128,11 @@
 @misc{rgp,
   title        = {AMD Radeon GPU Profiler},
   howpublished = {\url{https://gpuopen.com/rgp/}}
+}
+
+@misc{texture_mipmaps,
+  title        = {Texture Mipmapping},
+  howpublished = {\url{https://learnopengl.com/Getting-started/Textures}}
 }
 
 
