Finally reached 10k words for the report. Also working on the evaluation part of the document. Will need to now work on cutting down the report and being more succinct in regards to wording.

--- a/docs/report/refs.bib
+++ b/docs/report/refs.bib
@@ -13,9 +13,11 @@
   note   = {[Online; accessed 2-May-2023]}
 }
 
-@misc{blinn,
-  title        = {Blinn-Phong Reflection Model},
-  howpublished = {\url{https://en.wikipedia.org/wiki/Blinn%E2%80%93Phong_reflection_model}}
+@article{blinn,
+  title  = {{Illumination for Computer Generated Pictures}},
+  author = {{Bui Tuong Phong}},
+  year   = {1975},
+  note   = {[Online; accessed 12-December-2022]},
 }
 
 @misc{bounding_boxes,
@@ -96,7 +98,6 @@
   howpublished = {\url{https://github.com/CedricGuillemet/ImGuizmo}}
 }
 
-
 @article{indentation,
   title        = {K and R Indentation Style},
   howpublished = {\url{https://en.wikipedia.org/wiki/Indentation_style}}
@@ -106,6 +107,12 @@
 @misc{mit,
   title        = {The MIT License},
   howpublished = {\url{https://opensource.org/license/mit/}}
+}
+
+
+@misc{premake,
+  title        = {Premake - Powerfully simple build configuration},
+  howpublished = {\url{https://premake.github.io/}}
 }
 
 @article{rdna,
